fixed the duplicate entries being saved in the db

--- a/index.html
+++ b/index.html
@@ -30,30 +30,32 @@
         function showPosition(position) {
             console.log('Latitude:', position.coords.latitude);
             console.log('Longitude:', position.coords.longitude);
-            socket.emit('location',{latitude:position.coords.latitude, longitude:position.coords.longitude, user:name})
+            socket.emit('location', { latitude: position.coords.latitude, longitude: position.coords.longitude, user: name })
         }
 
-        socket.emit('new user', name)
+        // this is causing the roomId to not appear on server side
         getLocation()
+
+        var roomId = ''
+        socket.on('room', (room) => {
+            console.log(room);
+            roomId = room
+            // socket.emit('new user', { name: name, room: roomId })
+        })
 
         socket.on('new user', user => {
             console.log(user);
             var userEle = document.createElement('h3')
-            userEle.innerHTML = `${user} has joined the chat`
+            userEle.innerHTML = `${user.name} has joined the chat`
             userEle.style.textAlign = 'center';
             messages.appendChild(userEle)
         })
 
-        var roomId = ''
-        socket.on('room',(room)=>{
-            console.log(room);
-            roomId = room
-        })
 
         form.addEventListener('submit', function (e) {
             e.preventDefault();
             if (input.value) {
-                socket.emit('chat message', { msg: input.value, name: name, room:roomId });
+                socket.emit('chat message', { msg: input.value, name: name, room: roomId });
                 input.value = '';
             }
         });
